<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/_15sdp"
    android:layout_marginLeft="@dimen/_15sdp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_front_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="18.898dp"
        app:cardElevation="@dimen/_10sdp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H, 96:61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_constraint_front_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_gradient"
            app:layout_constraintDimensionRatio="H, 96:61">

            <TextView
                android:id="@+id/text_card_name_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_card_name"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_sixteen"
                android:typeface="monospace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_card_number_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_card_number"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_sixteen"
                android:typeface="monospace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_card_name_front_view" />

            <TextView
                android:id="@+id/text_expired_date_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_expired_date"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_fourteen"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@id/text_card_holder_front_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_card_number_front_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/hint_card_validity"
                app:layout_constraintBottom_toTopOf="@id/text_expired_date_front_view"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_card_holder_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_card_holder"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_fourteen"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_pin_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_hidden_pin"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_fourteen"
                android:typeface="monospace"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cvv_code_front_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:text="@string/text_view_cvc"
                app:layout_constraintBottom_toTopOf="@id/text_cvv_code_front_view"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/text_cvv_code_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_cvv_code"
                android:textAllCaps="true"
                android:textSize="@dimen/sp_fourteen"
                android:typeface="monospace"
                app:layout_constraintRight_toLeftOf="@+id/icon_help_blue_front_view"
                app:layout_constraintTop_toBottomOf="@+id/text_card_name_front_view" />

            <ImageView
                android:id="@+id/icon_help_blue_front_view"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="@+id/text_cvv_code_front_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_cvv_code_front_view"
                app:srcCompat="@drawable/ic_help_translucent_24dp"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/image_card_element_front_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/card_type_image" />

            <ImageView
                android:id="@+id/image_flip_card"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_5sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_flip_selector"
                android:contentDescription="@string/image_card_flip" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>