<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_back_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="18.898dp"
        app:cardElevation="12dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H, 96:61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card_constraint_back_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_gradient"
            app:layout_constraintDimensionRatio="H, 96:61">

            <ImageView
                android:id="@+id/image_flip_card_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_flip_selector"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/text_card_name_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_card_name"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:typeface="monospace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_card_number_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_card_number"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:typeface="monospace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_card_name_back_view" />

            <TextView
                android:id="@+id/text_expired_date_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_expired_date"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@id/text_card_holder_back_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_card_number_back_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/hint_card_validity"
                app:layout_constraintBottom_toTopOf="@id/text_expired_date_back_view"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_card_holder_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_card_holder"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_pin_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_hidden_pin"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:typeface="monospace"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cvv_code_back_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/text_view_cvc"
                app:layout_constraintBottom_toTopOf="@id/text_cvv_code_back_view"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/text_cvv_code_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_cvv_code"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:typeface="monospace"
                app:layout_constraintRight_toLeftOf="@+id/icon_help_blue_back_view"
                app:layout_constraintTop_toBottomOf="@+id/text_card_name_back_view" />

            <ImageView
                android:id="@+id/icon_help_blue_back_view"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_cvv_code_back_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_cvv_code_back_view"
                app:srcCompat="@drawable/ic_help_translucent_24dp" />

            <ImageView
                android:id="@+id/image_card_element_back_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>