<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/card_number_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        app:errorEnabled="true">

        <com.github.pinball83.maskededittext.MaskedEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_card_number"
            android:hint="@string/hint_card_number"
            android:inputType="number"
            android:gravity="center"
            android:maxLength="20"
            app:notMaskedSymbol="*"
            app:mask="****-****-****-****"
            app:replacementChar="X"
            app:deleteChar="X"
            android:textIsSelectable="true"
            android:selectAllOnFocus="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_create_card"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/card_cvc_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline_create_card"
        app:layout_constraintTop_toBottomOf="@+id/card_number_layout"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        app:counterMaxLength="3"
        app:counterEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_cvc_cvv"
            android:id="@+id/edit_text_card_cvc_cvv"
            android:inputType="number"
            android:gravity="center"
            android:maxLength="3"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/card_validity_layout"
        app:layout_constraintTop_toBottomOf="@id/card_number_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline_create_card"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_validity"
            android:id="@+id/edit_text_card_validity"
            android:inputType="date"
            android:gravity="center"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/card_holders_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="13dp"
        android:layout_marginRight="@dimen/margin_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline_create_card"
        app:layout_constraintTop_toBottomOf="@+id/card_cvc_layout"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_holders_name"
            android:id="@+id/edit_text_card_holders_name"
            android:inputType="textPersonName"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/card_holders_surname_layout"
        app:layout_constraintTop_toBottomOf="@id/card_validity_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline_create_card"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_holders_surname"
            android:id="@+id/edit_text_card_holders_surname"
            android:inputType="textPersonName"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline_create_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_holders_name_layout" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/card_pin_layout"
        app:layout_constraintTop_toBottomOf="@+id/card_holders_surname_layout"
        app:layout_constraintLeft_toLeftOf="@id/guideline_create_card"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_extra_large"
        android:layout_marginRight="@dimen/margin_extra_large"
        app:counterMaxLength="4"
        app:counterEnabled="true">

        <EditText
            android:id="@+id/edit_text_card_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/hint_card_pin"
            android:inputType="numberPassword"
            android:maxLength="4"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save_card"
        app:layout_constraintTop_toBottomOf="@id/card_pin_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin_extra_large"
        android:text="@string/btn_text_save_card"
        android:enabled="true"/>
</android.support.constraint.ConstraintLayout>